update_sprint7_files