@@ -1,94 +1,85 @@
 package tests;
 
 import io.qameta.allure.Description;
-import io.qameta.allure.Step;
 import io.qameta.allure.junit4.DisplayName;
-import io.restassured.http.ContentType;
-import io.restassured.response.Response;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
-
+import api.OrderApiClient;
+import models.Order;
+import java.util.Arrays;
 import java.util.List;
-import java.util.Map;
+import static org.apache.http.HttpStatus.SC_CREATED;
+import static org.hamcrest.Matchers.notNullValue;
 
 import static io.restassured.RestAssured.given;
 import static org.hamcrest.Matchers.notNullValue;
+import static org.apache.http.HttpStatus.*;
 
 @RunWith(Parameterized.class)
 public class CreateOrderTest {
+    private final Order order;
 
-    private final Map<String, Object> orderData;
-
-    public CreateOrderTest(Map<String, Object> orderData) {
-        this.orderData = orderData;
+    public CreateOrderTest(Order order) {
+        this.order = order;
     }
 
-    @Parameterized.Parameters(name = "Цвета: {0}")
+    @Parameterized.Parameters(name = "Тестовые данные: {0}")
     public static Object[][] getOrderData() {
-        return new Object[][] {
-                { Map.of(
-                        "firstName", "Naruto",
-                        "lastName", "Uzumaki",
-                        "address", "Konoha, 142 apt.",
-                        "metroStation", 4,
-                        "phone", "+7 800 355 35 35",
-                        "rentTime", 5,
-                        "deliveryDate", "2023-12-31",
-                        "comment", "Sasuke, come back to Konoha",
-                        "color", List.of("BLACK")
+        return new Object[][]{
+                {new Order(
+                        "Naruto",
+                        "Uzumaki",
+                        "Konoha, 142 apt.",
+                        4,
+                        "+7 800 355 35 35",
+                        5,
+                        "2023-12-31",
+                        "Sasuke, come back to Konoha",
+                        Arrays.asList("BLACK")
                 )},
-                { Map.of(
-                        "firstName", "Sasuke",
-                        "lastName", "Uchiha",
-                        "address", "Orochimaru's Hideout",
-                        "metroStation", 3,
-                        "phone", "+7 800 355 35 36",
-                        "rentTime", 3,
-                        "deliveryDate", "2023-12-30",
-                        "comment", "I'll come back when I'm ready",
-                        "color", List.of("GREY")
+                {new Order(
+                        "Sasuke",
+                        "Uchiha",
+                        "Orochimaru's Hideout",
+                        3,
+                        "+7 800 355 35 36",
+                        3,
+                        "2023-12-30",
+                        "I'll come back when I'm ready",
+                        Arrays.asList("GREY")
                 )},
-                { Map.of(
-                        "firstName", "Sakura",
-                        "lastName", "Haruno",
-                        "address", "Konoha Medical Center",
-                        "metroStation", 5,
-                        "phone", "+7 800 355 35 37",
-                        "rentTime", 7,
-                        "deliveryDate", "2024-01-01",
-                        "comment", "Waiting for both of you",
-                        "color", List.of("BLACK", "GREY")
+                {new Order(
+                        "Sakura",
+                        "Haruno",
+                        "Konoha Medical Center",
+                        5,
+                        "+7 800 355 35 37",
+                        7,
+                        "2024-01-01",
+                        "Waiting for both of you",
+                        Arrays.asList("BLACK", "GREY")
                 )},
-                { Map.of(
-                        "firstName", "Kakashi",
-                        "lastName", "Hatake",
-                        "address", "Hokage Office",
-                        "metroStation", 1,
-                        "phone", "+7 800 355 35 38",
-                        "rentTime", 1,
-                        "deliveryDate", "2023-12-25",
-                        "comment", "Mission complete"
+                {new Order(
+                        "Kakashi",
+                        "Hatake",
+                        "Hokage Office",
+                        1,
+                        "+7 800 355 35 38",
+                        1,
+                        "2023-12-25",
+                        "Mission complete",
+                        null
                 )}
         };
     }
 
     @Test
     @DisplayName("POST /api/v1/orders - Создание заказа с различными параметрами цвета")
-    @Description("Проверка создания заказа с разными комбинациями цветов: BLACK, GREY, оба цвета, без цвета")
-    @Step("Создание заказа с параметрами: {orderData}")
     public void createOrderWithDifferentColorsTest() {
-        createOrder(orderData)
+        OrderApiClient.createOrder(order)
                 .then()
-                .statusCode(201)
+                .statusCode(SC_CREATED)
                 .body("track", notNullValue());
-    }
-
-    @Step("Создание заказа")
-    private Response createOrder(Map<String, Object> orderData) {
-        return given()
-                .contentType(ContentType.JSON)
-                .body(orderData)
-                .post("https://qa-scooter.praktikum-services.ru/api/v1/orders");
     }
 }
